2008-06-29 Samuel Abels <http://debain.org>

	* Makefile: Add an installer that pulls dependencies from the repository.

2008-06-28 Samuel Abels <http://debain.org>

	* src/Exscript/Interpreter/ExpressionNode.py: Prioritize division and
	multiplication over other arithmetic operators.
	* src/Exscript/Exscript.py, exscript: Add support for interactive variables
	by setting the variable value to a bracketed expression (such as {foo}).
	* src/Exscript/FooLib/UrlParser.py: Cleanups.
	* src/Exscript/Exscript.py: Fix Python 2.3 compatibility.
	* src/Exscript/FooLib/Interact.py: Fix: Asking a username now works when the
	USER environment variable is not set.
	* src/Exscript/Interpreter/stdlib/Connection/auto_authorize.py: Fix a
	deadlock.
	* src/Exscript/TerminalActions/LoggedSequence.py: Fix: Only create an error
	log file if an error occured. Flush logfiles regularly. Log exceptions with
	tracebacks.
	* src/Exscript/FooLib/UrlParser.py, src/Exscript/TerminalActions/Connect.py,
	src/Exscript/Exscript.py: Add support for specifying a port number using URL
	style hostnames.
	* exscript: Add the --sleep command line switch for waiting a period of time
	before running the script.
	* src/Exscript/Exscript.py: Be less verbose by default.

2008-06-27 Samuel Abels <http://debain.org>

	* exscript, src/Exscript/Exscript.py: Fix several command line arguments
	that were mistakenly ignored. Got rid of the -a and -A command line
	arguments - this should now be done in the Exscript.
	* src/Exscript/TerminalActions/*.py: Port to new SpiffWorkQueue API.
	* src/Exscript/Interpreter/stdlib/Sys/tacacs_*.py: Add functions for
	aquiring/releasing the global TACACS lock.
	* exscript, src/Exscript/TerminalActions/LoggedSequence.py,
	src/Exscript/Exscript.py: Removed useless logfile locks. Added an overwrite 
	option for logfiles.
	* exscript, src/Exscript/Exscript.py: Support for selecting the ssh version.
	* src/Exscript/Interpreter/stdlib/Connection/auto_authorize.py: New stdlib